if(WIN32) 
    install(DIRECTORY "${PROJECT_SOURCE_DIR}/windows/include/"
    DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
elseif(APPLE)
    install(DIRECTORY "${PROJECT_SOURCE_DIR}/mac/include/"
    DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
elseif(UNIX)
    install(DIRECTORY "${PROJECT_SOURCE_DIR}/linux/include/"
    DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
endif()

if(WIN32) 
    install(DIRECTORY "${PROJECT_SOURCE_DIR}/windows/lib/"
    DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
elseif(APPLE)
    install(DIRECTORY "${PROJECT_SOURCE_DIR}/mac/lib/"
    DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
elseif(UNIX)
    install(DIRECTORY "${PROJECT_SOURCE_DIR}/linux/lib/"
    DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
endif()

if(WIN32) 
    install(DIRECTORY "${PROJECT_SOURCE_DIR}/windows/bin/"
  DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
elseif(APPLE)
    install(DIRECTORY "${PROJECT_SOURCE_DIR}/mac/bin/"
    DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
elseif(UNIX)
    install(DIRECTORY "${PROJECT_SOURCE_DIR}/linux/bin/"
    DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
endif()
